# MondayTimeTrack

./: .gitignore  Procfile  README.md  pyproject.toml  server.py  test.py
monday_time_track/: __init__.py  _types.py  logging_utils.py
monday_time_track/controllers/: monday_controller.py
monday_time_track/middlewares/: authentication.py
monday_time_track/monday_sdk/: __init__.py  client.py
monday_time_track/monday_sdk_py/: client.py
monday_time_track/services/: monday_svc.py  transform_svc.py
